Fix header logo spacing and favicon

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -68,10 +68,13 @@ header .navbar {
   border: 0px;
 }
 header .navbar-brand {
-  padding-top: 5px;
+  position: relative;
+  padding: 0;
 }
 header .brand-img {
-  height: 200%;
+  height: 150%;
+  top: -20%;
+  position: absolute;
 }
 header .navbar-default {
   background: none;
