--- a/css/responsive.css
+++ b/css/responsive.css
@@ -154,10 +154,6 @@ px      68    160    252    */
   p {
     font-size: 13px;
   }
-  header .navbar-default .navbar-toggle {
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
   #slider {
     padding-top: 90px;
     padding-bottom: 100px;
